[package]
name = "vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
getopts = "0.2"
num_enum = "0.5.4"
ansi_term = "0.12"
coarsetime = "0.1.19"
[[bin]]
name = "vm"
path = "src/main.rs"
